--- a/acrepo-mint/pom.xml
+++ b/acrepo-mint/pom.xml
@@ -26,9 +26,7 @@
       <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>edu.amherst.acdc</groupId>
-    <artifactId>repo-id-minter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>acrepo-mint</artifactId>
     <packaging>bundle</packaging>
 
     <name>repo-id-minter Blueprint Bundle</name>
