--- a/pom.xml
+++ b/pom.xml
@@ -21,20 +21,21 @@
     <activemq.version>5.12.0</activemq.version>
     <camel.version>2.15.2</camel.version>
     <commons-lang.version>3.4</commons-lang.version>
+    <commons-io.version>2.4</commons-io.version>
     <fcrepo-camel.version>4.3.0</fcrepo-camel.version>
     <jsonld.version>0.6.0</jsonld.version>
     <logback.version>1.1.2</logback.version>
+    <postgresql.version>9.1-901.jdbc4</postgresql.version>
     <slf4j.version>1.7.7</slf4j.version>
     <junit.version>4.11</junit.version>
   </properties>
 
   <modules>
-    <module>repo-id-mapper</module>
-    <module>repo-id-minter</module>
-    <module>repo-karaf</module>
+    <module>acrepo-idmapper-pgsql</module>
+    <module>acrepo-idmapper</module>
+    <module>acrepo-mint</module>
+    <module>acrepo-karaf</module>
   </modules>
-
-
 
   <dependencyManagement>
     <dependencies>
@@ -46,6 +47,11 @@
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-blueprint</artifactId>
+        <version>${camel.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-sql</artifactId>
         <version>${camel.version}</version>
       </dependency>
       <dependency>
@@ -62,6 +68,26 @@
         <groupId>org.fcrepo.camel</groupId>
         <artifactId>fcrepo-camel</artifactId>
         <version>${fcrepo-camel.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>${postgresql.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
