--- a/acrepo-idmapper/src/main/cfg/edu.amherst.acdc.idmapper.cfg
+++ b/acrepo-idmapper/src/main/cfg/edu.amherst.acdc.idmapper.cfg
@@ -1,14 +1,5 @@
-# The name of the container where internal audit events are created (if using
-# http://github.com/fcrepo4-exts/fcrepo-audit).  Events about
-# resources in this container are ignored.
-audit.container=/audit
-
 # In the event of failure, the maximum number of times a redelivery will be attempted.
 error.maxRedeliveries=10
-
-# The baseUri to use for event URIs in the triplestore. A `UUID` will be appended
-# to this value, forming, for instance: `http://example.com/event/{UUID}`
-event.baseUri=http://example.com/event
 
 # The connection URI used to connect to a local or remote ActiveMQ broker
 jms.brokerUrl=tcp://localhost:61616
@@ -16,5 +7,8 @@ jms.brokerUrl=tcp://localhost:61616
 # The camel URI for the incoming message stream.
 input.stream=activemq:topic:fedora
 
-# The base URL of the triplestore being used.
-triplestore.baseUrl=localhost:8080/fuseki/test/update
+# The RDF property to use as an external identifier
+id.property=dc:identifier
+
+# The full namespace of the above property
+id.namespace=http://purl.org/dc/elements/1.1/
