--- a/acrepo-idmapper-pgsql/pom.xml
+++ b/acrepo-idmapper-pgsql/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-      <artifactId>repo-services</artifactId>
+      <artifactId>repository-services</artifactId>
       <groupId>edu.amherst.acdc</groupId>
       <version>1.0.0-SNAPSHOT</version>
     </parent>
