--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-jetty</artifactId>
+        <version>${camel.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-sql</artifactId>
         <version>${camel.version}</version>
       </dependency>
