--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <commons-lang.version>3.4</commons-lang.version>
     <commons-io.version>2.4</commons-io.version>
     <fcrepo-camel.version>4.3.0</fcrepo-camel.version>
+    <fcrepo.version>4.3.1-SNAPSHOT</fcrepo.version>
     <jsonld.version>0.6.0</jsonld.version>
     <logback.version>1.1.2</logback.version>
     <postgresql.version>9.1-901.jdbc4</postgresql.version>
@@ -31,9 +32,9 @@
   </properties>
 
   <modules>
-    <module>acrepo-idmapper-pgsql</module>
-    <module>acrepo-idmapper</module>
-    <module>acrepo-mint</module>
+    <module>acrepo-idiomatic-pgsql</module>
+    <module>acrepo-idiomatic</module>
+    <module>acrepo-mint-service</module>
     <module>acrepo-karaf</module>
   </modules>
 
@@ -68,6 +69,11 @@
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-camel</artifactId>
         <version>${activemq.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.fcrepo</groupId>
+        <artifactId>fcrepo-kernel-api</artifactId>
+        <version>${fcrepo.version}</version>
       </dependency>
       <dependency>
         <groupId>org.fcrepo.camel</groupId>
@@ -141,6 +147,9 @@
           <groupId>org.apache.camel</groupId>
           <artifactId>camel-maven-plugin</artifactId>
           <version>${camel.version}</version>
+          <configuration>
+            <useBlueprint>true</useBlueprint>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
