--- a/acrepo-idiomatic/pom.xml
+++ b/acrepo-idiomatic/pom.xml
@@ -26,13 +26,15 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>acrepo-ideomatic</artifactId>
+  <artifactId>acrepo-idiomatic</artifactId>
   <packaging>bundle</packaging>
 
   <name>ID mapping service</name>
   <description>Camel-based service for mapping public IDs to Fedora IDs</description>
 
   <properties>
+    <osgi.export.packages>edu.amherst.acdc.idiomatic;version=${project.version}</osgi.export.packages>
+    <osgi.import.packages>javax.sql,*</osgi.import.packages>
   </properties>
 
   <dependencies>
@@ -40,6 +42,11 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework</groupId>-->
+      <!--<artifactId>spring-jdbc</artifactId>-->
+      <!--<version>${spring.version}</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-sql</artifactId>
@@ -47,7 +54,6 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-restlet</artifactId>
-      <version>${camel.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
@@ -58,20 +64,17 @@
       <artifactId>activemq-camel</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>fcrepo-kernel-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.fcrepo.camel</groupId>
       <artifactId>fcrepo-camel</artifactId>
     </dependency>
     <dependency>
-      <groupId>postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.codehaus.woodstox</groupId>
       <artifactId>woodstox-core-asl</artifactId>
-      <version>4.4.1</version>
     </dependency>
-
 
     <!-- logging -->
     <dependency>
@@ -88,12 +91,6 @@
     </dependency>
 
     <!-- testing -->
-    <dependency>
-      <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-idiomatic-pgsql</artifactId>
-      <version>${project.version}</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
       <artifactId>acrepo-mint-service</artifactId>
@@ -140,7 +137,7 @@
             <configuration>
               <artifacts>
                 <artifact>
-                  <file>src/main/cfg/edu.amherst.acdc.idmapper.cfg</file>
+                  <file>src/main/cfg/edu.amherst.acdc.idiomatic.cfg</file>
                   <type>cfg</type>
                   <classifier>configuration</classifier>
                 </artifact>
@@ -160,10 +157,6 @@
         <artifactId>maven-failsafe-plugin</artifactId>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.camel</groupId>
-        <artifactId>camel-maven-plugin</artifactId>
-      </plugin>
     </plugins>
   </build>
 </project>
