added README for acrepo-idiomatic-pgsql

--- a/acrepo-idiomatic-pgsql/src/main/cfg/edu.amherst.acdc.idiomatic.pgsql.cfg
+++ b/acrepo-idiomatic-pgsql/src/main/cfg/edu.amherst.acdc.idiomatic.pgsql.cfg
@@ -1,7 +1,10 @@
+# These values should not be changed
 osgi.jdbc.driver.name=PostgreSQL JDBC Driver
 osgi.jdbc.driver.class=org.postgresql.Driver
 dataSourceName=idiomaticds
 
+# The values below should be configured to match your
+# local pgsql database server.
 databaseName=idiomatic
 serverName=localhost
 portNumber=5432
