--- a/acrepo-idiomatic/src/main/cfg/edu.amherst.acdc.idiomatic.cfg
+++ b/acrepo-idiomatic/src/main/cfg/edu.amherst.acdc.idiomatic.cfg
@@ -1,6 +1,9 @@
 # In the event of failure, the maximum number of times a redelivery will be attempted.
 error.maxRedeliveries=10
 
+# Fedora Repository location
+fcrepo.baseUrl=localhost:8080/fcrepo/rest
+
 # The connection URI used to connect to a local or remote ActiveMQ broker
 jms.brokerUrl=tcp://localhost:61616
 
