working implementation of id-mapping service

--- a/acrepo-idiomatic/src/main/cfg/edu.amherst.acdc.idiomatic.cfg
+++ b/acrepo-idiomatic/src/main/cfg/edu.amherst.acdc.idiomatic.cfg
@@ -15,3 +15,8 @@ id.property=dc:identifier
 
 # The full namespace of the above property
 id.namespace=http://purl.org/dc/elements/1.1/
+
+# An external identifier may have a standard prefix, as it is stored
+# in fedora. By setting this value, that prefix will be removed from
+# the id-mapping layer (e.g. http://example.org/)
+id.prefix=
