--- a/acrepo-idiomatic/pom.xml
+++ b/acrepo-idiomatic/pom.xml
@@ -48,7 +48,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-restlet</artifactId>
+      <artifactId>camel-jetty9</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
@@ -123,7 +123,6 @@
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
 
-      <!-- reserve network ports for integration testing -->
       <!-- add configuration file to artifact set for OSGi deployment -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
