--- a/acrepo-mods-xml-service/pom.xml
+++ b/acrepo-mods-xml-service/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>camel-blueprint</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-saxon</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.fcrepo.camel</groupId>
       <artifactId>fcrepo-camel</artifactId>
     </dependency>
