--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <jsonld.version>0.6.0</jsonld.version>
     <logback.version>1.1.2</logback.version>
     <postgresql.version>9.4-1201-jdbc41</postgresql.version>
+    <saxon.version>9.6.0-7</saxon.version>
     <slf4j.version>1.7.7</slf4j.version>
     <junit.version>4.11</junit.version>
     <woodstox.version>4.4.1</woodstox.version>
@@ -59,6 +60,11 @@
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-jetty9</artifactId>
+        <version>${camel.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-saxon</artifactId>
         <version>${camel.version}</version>
       </dependency>
       <dependency>
@@ -121,6 +127,7 @@
         <artifactId>derby</artifactId>
         <version>${derby.version}</version>
       </dependency>
+
 
       <!-- logging -->
       <dependency>
