--- a/pom.xml
+++ b/pom.xml
@@ -25,15 +25,16 @@
     <derby.version>10.11.1.1</derby.version>
     <fcrepo-camel.version>4.3.0</fcrepo-camel.version>
     <fcrepo.version>4.3.1-SNAPSHOT</fcrepo.version>
+    <junit.version>4.11</junit.version>
     <jsonld.version>0.6.0</jsonld.version>
     <logback.version>1.1.2</logback.version>
     <postgresql.version>9.4-1201-jdbc41</postgresql.version>
     <saxon.version>9.6.0-7</saxon.version>
     <slf4j.version>1.7.7</slf4j.version>
-    <junit.version>4.11</junit.version>
-    <woodstox.version>4.4.1</woodstox.version>
-    <pax-jdbc.version>0.7.0</pax-jdbc.version>
     <spring.version>4.1.7.RELEASE</spring.version>
+    <pax-jdbc.version>0.7.0</pax-jdbc.version>
+    <woodstox.version>4.4.1</woodstox.version>
+    <!-- OSGi -->
     <osgi.import.packages>*</osgi.import.packages>
   </properties>
 
