--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <module>acrepo-idiomatic</module>
     <module>acrepo-karaf</module>
     <module>acrepo-mint-service</module>
-    <module>acrepo-mods-xml-service</module>
+    <module>acrepo-xml-metadata</module>
   </modules>
 
   <dependencyManagement>
