change riak config from prefix to bucket name
add skeleton of template impl

--- a/acrepo-jsonld-cache/src/main/cfg/edu.amherst.acdc.jsonld.cache.cfg
+++ b/acrepo-jsonld-cache/src/main/cfg/edu.amherst.acdc.jsonld.cache.cfg
@@ -9,3 +9,7 @@ jsonld.context=https://acdc.amherst.edu/jsonld/context.json"
 
 # Repository Base URL
 fcrepo.baseUrl=localhost:8080/fcrepo/rest
+
+# Riak settings
+riak.host=localhost:8098
+riak.bucket=fcrepo
