add initial template customization

--- a/acrepo-template-mustache/src/main/cfg/edu.amherst.acdc.template.mustache.cfg
+++ b/acrepo-template-mustache/src/main/cfg/edu.amherst.acdc.template.mustache.cfg
@@ -7,6 +7,15 @@ rest.port=13433
 # The fedora baseUrl
 fcrepo.baseUrl=localhost:8080/fcrepo/rest
 
+# The resulting content-type
+mustache.contentType=text/html
+
+# The mustache template
+mustache.contentType=edu/amherst/acdc/template/mustache/template.mustache
+
+# The json+ld context file
+jsonld.context=https://acdc.amherst.edu/jsonld/context.json
+
 # The host and prefix of the riak cluster
 riak.host=localhost:8098
 riak.bucket=fcrepo
