--- a/acrepo-template-mustache/pom.xml
+++ b/acrepo-template-mustache/pom.xml
@@ -37,6 +37,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-mustache</artifactId>
     </dependency>
     <dependency>
