--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-jackson</artifactId>
+        <version>${camel.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-mustache</artifactId>
         <version>${camel.version}</version>
       </dependency>
