--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
   <artifactId>repository-services</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <url>https://acdc.amherst.edu/wiki</url>
+  <inceptionYear>2015</inceptionYear>
 
   <name>Repository Services for use with Fedora</name>
   <description>A collection of repository services for use with Fedora</description>
@@ -21,6 +23,14 @@
     <name>Amherst College</name>
     <url>https://www.amherst.edu/</url>
   </organization>
+
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+      <comments>Copyright (c) 2015 Amherst College</comments>
+    </license>
+  </licenses>
 
   <properties>
     <project.copyrightYear>2015</project.copyrightYear>
@@ -235,4 +245,8 @@
       </plugin>
     </plugins>
   </build>
+
+  <mailingLists>
+    <mailingList/>
+  </mailingLists>
 </project>
