--- a/acrepo-jsonld-cache/pom.xml
+++ b/acrepo-jsonld-cache/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>repository-services</artifactId>
     <groupId>edu.amherst.acdc</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>acrepo-jsonld-cache</artifactId>
