--- a/acrepo-mint-service/pom.xml
+++ b/acrepo-mint-service/pom.xml
@@ -23,7 +23,7 @@
     <parent>
       <artifactId>repository-services</artifactId>
       <groupId>edu.amherst.acdc</groupId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </parent>
 
     <artifactId>acrepo-mint-service</artifactId>
