[maven-release-plugin] prepare for next development iteration

--- a/acrepo-idiomatic/pom.xml
+++ b/acrepo-idiomatic/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>edu.amherst.acdc</groupId>
     <artifactId>repository-services</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>acrepo-idiomatic</artifactId>
