--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>edu.amherst.acdc</groupId>
   <artifactId>repository-services</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <url>https://acdc.amherst.edu/wiki</url>
   <inceptionYear>2015</inceptionYear>
@@ -64,7 +64,7 @@
     <connection>scm:git:git://gitlab.amherst.edu/acdc/repository-extension-services.git</connection>
     <developerConnection>scm:git:git@gitlab.amherst.edu:acdc/repository-extension-services.git</developerConnection>
     <url>https://gitlab.amherst.edu/acdc/repository-extension-services</url>
-    <tag>repository-services-1.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <modules>
