--- a/acrepo-xml-metadata/pom.xml
+++ b/acrepo-xml-metadata/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>edu.amherst.acdc</groupId>
     <artifactId>repository-services</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>acrepo-xml-metadata</artifactId>
