--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>edu.amherst.acdc</groupId>
   <artifactId>repository-services</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <url>https://acdc.amherst.edu/wiki</url>
   <inceptionYear>2015</inceptionYear>
