--- a/acrepo-jsonld-cache/pom.xml
+++ b/acrepo-jsonld-cache/pom.xml
@@ -68,6 +68,12 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-test-blueprint</artifactId>
     </dependency>
+    <dependency>
+      <groupId>edu.amherst.acdc</groupId>
+      <artifactId>acrepo-jsonld-service</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
