--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   <properties>
     <project.copyrightYear>2015</project.copyrightYear>
     <activemq.version>5.11.1</activemq.version>
-    <camel.version>2.15.2</camel.version>
+    <camel.version>2.16.1</camel.version>
     <commons-lang.version>3.4</commons-lang.version>
     <commons-io.version>2.4</commons-io.version>
     <derby.version>10.11.1.1</derby.version>
@@ -68,6 +68,9 @@
   </scm>
 
   <modules>
+    <module>acrepo-registry-api</module>
+    <module>acrepo-registry-memory</module>
+    <module>acrepo-apix</module>
     <module>acrepo-idiomatic-pgsql</module>
     <module>acrepo-idiomatic</module>
     <module>acrepo-karaf</module>
