added binding implementation

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
   <modules>
     <module>acrepo-registry-api</module>
     <module>acrepo-registry-memory</module>
+    <module>acrepo-binding-api</module>
     <module>acrepo-apix</module>
     <module>acrepo-idiomatic-pgsql</module>
     <module>acrepo-idiomatic</module>
