added rest-based apix-binding integration

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
     <module>acrepo-registry-api</module>
     <module>acrepo-registry-memory</module>
     <module>acrepo-binding-api</module>
+    <module>acrepo-binding-memory</module>
     <module>acrepo-apix</module>
     <module>acrepo-idiomatic-pgsql</module>
     <module>acrepo-idiomatic</module>
