--- a/acrepo-apix/src/main/cfg/edu.amherst.acdc.apix.cfg
+++ b/acrepo-apix/src/main/cfg/edu.amherst.acdc.apix.cfg
@@ -1,5 +1,8 @@
-rest.prefix=/apix
+rest.host=localhost
 rest.port=13431
+rest.proxy=/fcrepo/rest
+rest.binding=/apix/bind
+rest.registry=/apix/registry
 
 # Fedora Repository location
 fcrepo.baseUrl=localhost:8080/fcrepo/rest
