--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,16 @@
   </licenses>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.copyrightYear>2016</project.copyrightYear>
-    <activemq.version>5.11.1</activemq.version>
+    <activemq.version>5.13.2</activemq.version>
     <camel.version>2.17.1</camel.version>
     <commons-lang.version>3.4</commons-lang.version>
     <commons-io.version>2.5</commons-io.version>
     <derby.version>10.12.1.1</derby.version>
     <fcrepo-camel.version>4.4.2</fcrepo-camel.version>
+    <hk2.version>2.3.0</hk2.version>
     <junit.version>4.12</junit.version>
     <jsonld.version>0.8.3</jsonld.version>
     <logback.version>1.1.7</logback.version>
@@ -53,11 +56,18 @@
 
     <!-- plugins -->
     <paxexam.plugin.version>1.2.4</paxexam.plugin.version>
+    <jetty.plugin.version>9.2.6.v20141205</jetty.plugin.version>
 
     <!-- transitive dependencies for karaf -->
-    <httpclient.version>4.2.6</httpclient.version>
-    <httpcore.version>4.2.5</httpcore.version>
+    <httpclient.version>4.5.2</httpclient.version>
+    <httpcore.version>4.4.4</httpcore.version>
     <commons-codec.version>1.10</commons-codec.version>
+
+    <!-- test gear -->
+    <fcrepo.version>4.5.1</fcrepo.version>
+    <karaf.version>4.0.5</karaf.version>
+    <pax-exam.version>4.8.0</pax-exam.version>
+    <jena.fuseki.version>2.3.1</jena.fuseki.version>
 
     <!-- OSGi -->
     <osgi.import.packages>*</osgi.import.packages>
@@ -217,6 +227,12 @@
         <version>${pax-exam.version}</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>${httpclient.version}</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -260,6 +276,15 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>itests</id>
+      <modules>
+        <module>acrepo-itests</module>
+      </modules>
+    </profile>
+  </profiles>
 
   <mailingLists>
     <mailingList />
