--- a/acrepo-itests/pom.xml
+++ b/acrepo-itests/pom.xml
@@ -47,7 +47,7 @@
 
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-jsonld-cache</artifactId>
+      <artifactId>acrepo-jsonld-osgi</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
