--- a/acrepo-karaf/pom.xml
+++ b/acrepo-karaf/pom.xml
@@ -41,7 +41,7 @@
 
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-jsonld-cache</artifactId>
+      <artifactId>acrepo-jsonld-osgi</artifactId>
       <scope>test</scope>
       <version>${project.version}</version>
     </dependency>
