--- a/acrepo-template-mustache/pom.xml
+++ b/acrepo-template-mustache/pom.xml
@@ -49,12 +49,7 @@
     </dependency>
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-jsonld-service</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-jsonld-cache</artifactId>
+      <artifactId>acrepo-jsonld-osgi</artifactId>
       <version>${project.version}</version>
     </dependency>
 
