--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
     <module>acrepo-jsonld-service</module>
     <module>acrepo-jsonld-osgi</module>
     <module>acrepo-template-mustache</module>
+    <module>acrepo-fits-rest</module>
   </modules>
 
   <dependencyManagement>
@@ -206,11 +207,13 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
         <version>${logback.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>${logback.version}</version>
+        <scope>test</scope>
       </dependency>
 
       <!-- testing -->
