--- a/acrepo-jsonld-service/src/main/cfg/edu.amherst.acdc.jsonld.service.cfg
+++ b/acrepo-jsonld-service/src/main/cfg/edu.amherst.acdc.jsonld.service.cfg
@@ -2,7 +2,9 @@
 error.maxRedeliveries=10
 
 # HTTP Port
+rest.host=localhost
 rest.port=13421
+rest.prefix=/jsonld
 
 # JSON Context file
 jsonld.context=https://acdc.amherst.edu/jsonld/context.json"
