--- a/acrepo-template-mustache/src/main/cfg/edu.amherst.acdc.template.mustache.cfg
+++ b/acrepo-template-mustache/src/main/cfg/edu.amherst.acdc.template.mustache.cfg
@@ -2,7 +2,9 @@
 error.maxRedeliveries=10
 
 # The port on which the service is made available
+rest.host=localhost
 rest.port=13433
+rest.prefix=/template
 
 # The fedora baseUrl
 fcrepo.baseUrl=localhost:8080/fcrepo/rest
@@ -14,8 +16,4 @@ mustache.contentType=text/html
 mustache.contentType=edu/amherst/acdc/template/mustache/template.mustache
 
 # The json+ld context file
-jsonld.context=https://acdc.amherst.edu/jsonld/context.json
-
-# The host and prefix of the riak cluster
-riak.host=localhost:8098
-riak.bucket=fcrepo
+jsonld.context=https://acdc.amherst.edu/jsonld/models.json
