normalize host/port configuration for repo services

--- a/acrepo-idiomatic/src/main/cfg/edu.amherst.acdc.idiomatic.cfg
+++ b/acrepo-idiomatic/src/main/cfg/edu.amherst.acdc.idiomatic.cfg
@@ -10,6 +10,11 @@ jms.brokerUrl=tcp://localhost:61616
 # The camel URI for the incoming message stream.
 input.stream=activemq:topic:fedora
 
+# The rest endpoint components
+rest.host=localhost
+rest.port=9101
+rest.prefix=/idiomatic
+
 # The RDF property to use as an external identifier
 id.property=dc:identifier
 
