--- a/acrepo-xml-metadata/src/main/cfg/edu.amherst.acdc.xml.metadata.cfg
+++ b/acrepo-xml-metadata/src/main/cfg/edu.amherst.acdc.xml.metadata.cfg
@@ -2,7 +2,8 @@
 error.maxRedeliveries=10
 
 # The port on which the service is made available
-rest.port=9070
+rest.port=9104
+rest.host=localhost
 
 # The fedora baseUrl
 fcrepo.baseUrl=localhost:8080/fcrepo/rest
