--- a/acrepo-karaf/pom.xml
+++ b/acrepo-karaf/pom.xml
@@ -55,6 +55,13 @@
 
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
+      <artifactId>acrepo-services-validation</artifactId>
+      <scope>test</scope>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>edu.amherst.acdc</groupId>
       <artifactId>acrepo-mint-service</artifactId>
       <scope>test</scope>
       <version>${project.version}</version>
@@ -110,6 +117,13 @@
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>${commons-codec.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.andrewoma.dexx</groupId>
+      <artifactId>collection</artifactId>
+      <version>${dexx.version}</version>
       <scope>test</scope>
     </dependency>
 
