--- a/acrepo-itests/pom.xml
+++ b/acrepo-itests/pom.xml
@@ -40,7 +40,7 @@
 
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-mint-service</artifactId>
+      <artifactId>acrepo-services-mint</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
