--- a/acrepo-services-mint/pom.xml
+++ b/acrepo-services-mint/pom.xml
@@ -26,14 +26,14 @@
       <version>1.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>acrepo-mint-service</artifactId>
+    <artifactId>acrepo-services-mint</artifactId>
     <packaging>bundle</packaging>
 
     <name>Id Minter Blueprint Bundle</name>
     <description>Repository Id Minter OSGi blueprint bundle project.</description>
 
     <properties>
-      <osgi.export.packages>edu.amherst.acdc.mint*;version=${project.version}</osgi.export.packages>
+      <osgi.export.packages>edu.amherst.acdc.services.mint*;version=${project.version}</osgi.export.packages>
     </properties>
 
     <dependencies>
@@ -84,7 +84,7 @@
             <configuration>
               <artifacts>
                 <artifact>
-                  <file>src/main/cfg/edu.amherst.acdc.mint.cfg</file>
+                  <file>src/main/cfg/edu.amherst.acdc.services.mint.cfg</file>
                   <type>cfg</type>
                   <classifier>configuration</classifier>
                 </artifact>
