--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.copyrightYear>2016</project.copyrightYear>
-    <activemq.version>5.13.2</activemq.version>
+    <activemq.version>5.13.3</activemq.version>
     <camel.version>2.17.1</camel.version>
     <commons-lang.version>3.4</commons-lang.version>
     <commons-io.version>2.5</commons-io.version>
@@ -88,11 +88,11 @@
     <module>acrepo-idiomatic</module>
     <module>acrepo-image-service</module>
     <module>acrepo-karaf</module>
-    <module>acrepo-mint-service</module>
+    <module>acrepo-services-jsonld</module>
+    <module>acrepo-services-mint</module>
     <module>acrepo-services-validation</module>
     <module>acrepo-xml-metadata</module>
     <module>acrepo-jsonld-service</module>
-    <module>acrepo-services-jsonld</module>
     <module>acrepo-template-mustache</module>
     <module>acrepo-fits-rest</module>
   </modules>
