--- a/acrepo-jsonld-service/src/main/cfg/edu.amherst.acdc.jsonld.service.cfg
+++ b/acrepo-jsonld-service/src/main/cfg/edu.amherst.acdc.jsonld.service.cfg
@@ -7,7 +7,7 @@ rest.port=9102
 rest.prefix=/jsonld
 
 # JSON Context file
-jsonld.context=https://acdc.amherst.edu/jsonld/context.json"
+jsonld.context=https://acdc.amherst.edu/jsonld/models.json
 
 # Repository Base URL
 fcrepo.baseUrl=localhost:8080/fcrepo/rest
