--- a/acrepo-karaf/pom.xml
+++ b/acrepo-karaf/pom.xml
@@ -41,7 +41,7 @@
 
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-jsonld-osgi</artifactId>
+      <artifactId>acrepo-services-jsonld</artifactId>
       <scope>test</scope>
       <version>${project.version}</version>
     </dependency>
@@ -65,15 +65,6 @@
       <artifactId>acrepo-mint-service</artifactId>
       <scope>test</scope>
       <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-karaf</artifactId>
-      <version>${project.version}</version>
-      <type>xml</type>
-      <classifier>features</classifier>
-      <scope>test</scope>
     </dependency>
 
     <!-- Testing & Camel Plugin -->
