--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
     <module>acrepo-services-validation</module>
     <module>acrepo-xml-metadata</module>
     <module>acrepo-jsonld-service</module>
-    <module>acrepo-jsonld-osgi</module>
+    <module>acrepo-services-jsonld</module>
     <module>acrepo-template-mustache</module>
     <module>acrepo-fits-rest</module>
   </modules>
