This restructures the xml-metadata module to make it actually work: at least for OAI_DC export. It adds integration tests, a valid XSLT and support for an OPTIONS endpoint.

--- a/acrepo-xml-metadata/pom.xml
+++ b/acrepo-xml-metadata/pom.xml
@@ -52,6 +52,11 @@
       <artifactId>junit</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-test-blueprint</artifactId>
       <scope>test</scope>
