--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,8 @@
     <woodstox.version>4.4.1</woodstox.version>
     <xerces.version>2.11.0</xerces.version>
     <jena.version>3.1.0</jena.version>
+    <jackson2.version>2.7.5</jackson2.version>
+    <marmotta.version>3.3.0</marmotta.version>
 
     <!-- plugins -->
     <paxexam.plugin.version>1.2.4</paxexam.plugin.version>
@@ -63,10 +65,28 @@
     <httpclient.version>4.5.2</httpclient.version>
     <httpcore.version>4.4.5</httpcore.version>
     <commons-codec.version>1.10</commons-codec.version>
+    <commons-csv.version>1.4</commons-csv.version>
     <dexx.version>0.6</dexx.version>
     <commons-csv.version>1.0</commons-csv.version>
     <thrift.version>0.9.2</thrift.version>
-    <jackson2.version>2.7.5</jackson2.version>
+    <semargl.version>0.6.1</semargl.version>
+    <sesame.version>2.7.13</sesame.version>
+    <jsonld-sesame.version>0.5.1</jsonld-sesame.version>
+    <commons-httpclient.version>3.1</commons-httpclient.version>
+    <guava16.version>16.0</guava16.version>
+    <commons-collections.version>3.2.1</commons-collections.version>
+    <joda-time.version>2.5</joda-time.version>
+    <commons-validator.version>1.4.0</commons-validator.version>
+    <commons-beanutils.version>1.8.3</commons-beanutils.version>
+    <cal10n.version>0.8.1</cal10n.version>
+    <jaxen.version>1.1.6</jaxen.version>
+    <commons-digester.version>1.8</commons-digester.version>
+    <fluent-hc.version>4.5.2</fluent-hc.version>
+    <httpclient-cache.version>4.3.5</httpclient-cache.version>
+    <httpcore-nio.version>4.4.4</httpcore-nio.version>
+    <httpmime.version>4.5.2</httpmime.version>
+    <jdom2.version>2.0.5</jdom2.version>
+    <wrapped.bundle.location>http://www.ats.amherst.edu/bundles</wrapped.bundle.location>
 
     <!-- test gear -->
     <fcrepo.version>4.5.1</fcrepo.version>
@@ -91,6 +111,8 @@
     <module>acrepo-image-service</module>
     <module>acrepo-karaf</module>
     <module>acrepo-services-jsonld</module>
+    <module>acrepo-services-ldcache</module>
+    <module>acrepo-services-ldcache-pgsql</module>
     <module>acrepo-services-mint</module>
     <module>acrepo-services-validation</module>
     <module>acrepo-xml-metadata</module>
@@ -182,6 +204,16 @@
         <version>${woodstox.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient-osgi</artifactId>
+        <version>${httpclient.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore-osgi</artifactId>
+        <version>${httpcore.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>${postgresql.version}</version>
@@ -205,6 +237,36 @@
         <groupId>org.apache.jena</groupId>
         <artifactId>jena-osgi</artifactId>
         <version>${jena.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.marmotta</groupId>
+        <artifactId>ldclient-provider-xml</artifactId>
+        <version>${marmotta.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.marmotta</groupId>
+        <artifactId>ldclient-provider-rdf</artifactId>
+        <version>${marmotta.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.marmotta</groupId>
+        <artifactId>ldclient-provider-rdfa</artifactId>
+        <version>${marmotta.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.marmotta</groupId>
+        <artifactId>ldcache-api</artifactId>
+        <version>${marmotta.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.marmotta</groupId>
+        <artifactId>ldcache-core</artifactId>
+        <version>${marmotta.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.marmotta</groupId>
+        <artifactId>ldcache-backend-file</artifactId>
+        <version>${marmotta.version}</version>
       </dependency>
 
       <!-- logging -->
@@ -281,6 +343,12 @@
          <artifactId>maven-paxexam-plugin</artifactId>
          <version>${paxexam.plugin.version}</version>
        </plugin>
+        <plugin>
+          <groupId>org.apache.karaf.tooling</groupId>
+          <artifactId>karaf-maven-plugin</artifactId>
+          <version>${karaf.version}</version>
+          <extensions>true</extensions>
+        </plugin>
       </plugins>
     </pluginManagement>
 
